--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,10 @@
         <activity
             android:name=".ProjectActivity"
             android:label="@string/title_activity_project"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".TaskListActivity"
+            android:label="@string/title_activity_task_list"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
